--- a/index.html
+++ b/index.html
@@ -8,10 +8,38 @@
   <!-- Tailwind link -->
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="p-10">
- <section class="bg-purple-100">
+<body class="p-5 md:p-10 text-black">
+<section class="bg-teal-200 rounded-2xl p-5">
+  <div class="container mx-auto">
+    <div class="flex">
+      <a class="text-3xl font-bold pr-5 border-r border-teal-300 mr-5" href="index.html">MVision</a>
+        <div class="my-auto">
+          <button class="">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            </svg>
+            
 
- </section>
+          </button>
+          <ul class=" hidden font-bold text-gray-700">
+            <li class="pr-5"> <a class="px-3 py-2 border border-teal-200 rounded hover:border-teal-500" href="">Home</a></li>
+            <li class="pr-5"> <a class="px-3 py-2 border border-teal-200 rounded hover:border-teal-500" href="">About</a></li>
+            <li class="pr-5"> <a class="px-3 py-2 border border-teal-200 rounded hover:border-teal-500" href="">Services</a></li>
+            <li class="pr-5"> <a class="px-3 py-2 border border-teal-200 rounded hover:border-teal-500" href="">Portfolio</a></li>
+            <li class="pr-5"> <a class="px-3 py-2 border border-teal-200 rounded hover:border-teal-500" href="">Contact</a></li>
+          </ul>
+        </div>
+      <a href="" class="flex ml-auto text-mdium bg-red-600 text-white px-3 py-2 rounded font-bold ml-auto hover:bg-white hover:text-red-600">
+        <span class="pr-1 hidden lg:block">
+          Get a Quote
+        </span>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375M21 12c0 4.556-4.03 8.25-9 8.25a9.764 9.764 0 01-2.555-.337A5.972 5.972 0 015.41 20.97a5.969 5.969 0 01-.474-.065 4.48 4.48 0 00.978-2.025c.09-.457-.133-.901-.467-1.226C3.93 16.178 3 14.189 3 12c0-4.556 4.03-8.25 9-8.25s9 3.694 9 8.25z" />
+      </svg>
+      </a>
+    </div>
+  </div>
+</section>
 </body>
 </html>
 
